--- a/deploy/app-deployment.yaml
+++ b/deploy/app-deployment.yaml
@@ -14,6 +14,12 @@ spec:
     spec:
       containers:
       - name: app
-        image: miragenn/of-test-app:0.0.2
+        image: miragenn/of-test-app:0.0.3
         ports:
         - containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /api/healthcheck
+            port: 8080
+          initialDelaySeconds: 1
+          periodSeconds: 5
